# scraping_test

./: README.md  pyproject.toml
scraping_test/: scrapy.cfg
scraping_test/scraping_test/: middlewares.py  settings.py
scraping_test/scraping_test/spiders/: yelp_spider.py
