[tool.poetry]
name = "scraping-test"
version = "0.1.0"
description = ""
authors = ["yelysei.klymenko <yelisey.klimenko.kpi@gmail.com>"]
readme = "README.md"
packages = [{include = "scraping_test"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.11.0"
pydantic = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
